objects/Customer_Success_Table__c.object
<CustomObject>
    <fields>
        <fullName>CUST_CITY__c</fullName>
        <label>CUST_CITY</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client_Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>triger_field__c</fullName>
        <label>triger_field</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer_Success_Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>CUST_CITY__c</columns>
        <columns>triger_field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer_Success_Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer_Success_Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CUST_CITY_c_rule</fullName>
        <active>false</active>
        <errorConditionFormula>CUST_CITY__c  &lt;&gt;  UPPER( CUST_CITY__c)</errorConditionFormula>
        <errorMessage>CUST_CITY must be upper case</errorMessage>
    </validationRules>
</CustomObject>